     suspending the `upsmon` process, etc. [#2597]
   * Introduced delivery of default systemd presets (lists of enabled/disabled
     units). [#2721]

 - gamatronic driver revised for safer memory operations; this was reported
   to have fixed a Segmentation Fault seen in earlier NUT releases with
   some of the devices supported by this driver. [#2427]

 - phoenixcontact_modbus driver: Introduced Phoenix Contact QUINT4-UPS/24DC
   management (only new modbus addresses). [#2689, #2716]

 - upsd:
   * `upsd_cleanup()` is now traced, to more easily see that the daemon is
     exiting (and/or start-up has aborted due to configuration or run-time
     issues). Warning about "world readable" files clarified. [#2417]

 - nut-scanner:
   * the tool relies on dynamic loading of shared objects (library files)
     orchestrated at run-time rather than pre-compiled, to avoid excessively
     huge package footprints. This however relies on knowing (or sufficiently
     safely guessing) the library file names to use, and short `libname.so`
     is not ubiquitously available. With the new `m4` macro `AX_REALPATH_LIB`
     we can store and try to use the file name which was present on the build
     system, while we search for a suitable library. [#2431]
+
NOTE: A different but functionally equivalent trick is done for `libupsclient`
during a NUT build.
   * fixed support for IPv6 addresses (passed in square brackets) for both
     `-s` start/`-e` end command-line options, and for `-m cidr/mask` option.
     [issue #2512, PR #2518]
   * newly added support to scan several IP addresses (single or ranges)
     with the same call, by repeating command-line options; also `-m auto{,4,6}`
     can be specified (once) to select IP (all, IPv4, IPv6) address ranges of
     configured local network interfaces.
     An `/ADDRLEN` suffix can be added to the option, to filter out discovered
     subnets with too many bits available for the host address part (avoiding